app/assets/stylesheets/components/expertList.scss
$expert-image-size: 100px;

.expertList {
  padding: 0;
}

  .expertList-item {
    list-style-type: none;
    display: flex;
    margin: 10px 0;
  }

    .expertList-item-heading {
      color: #000;
      font-weight: 400;
      font-size: 2rem;
      margin: 0 0 10px;
    }

    .expertList-item-description {
      margin: 10px 0;
    }

      .expertList-item-description p:first-child {
        margin: 0 0 10px;
      }

      .expertList-item-description p:last-child {
        margin: 10px 0 0;
      }

    .expertList-item-imageLink {
      max-width: $expert-image-size;
      padding-right: 10px;
    }

      .expertList-item-imageLink-image {
        max-width: $expert-image-size;
      }

.expertList.mod-two-columns {

  .expertList-item {
    display: inline-flex;
    box-sizing: border-box;

    @media (min-width: 500px) {
      max-width: 50%;
    }
  }

    .expertList-item-imageLink-image {
      max-width: $expert-image-size/2;
    }

}

